Uploaded image for project: 'Apache HAWQ'
  1. Apache HAWQ
  2. HAWQ-1378

Elaborate the "invalid command-line arguments for server process" error.

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 2.1.0.0-incubating
    • 2.2.0.0-incubating
    • Query Execution
    • None

    Description

      I saw the following errors when running several times,

      "Error dispatching to ***: connection pointer is NULL."
      FATAL: invalid command-line arguments for server process

      While this usually means there is bug in related code but the code should have reported more detailed log so that we could catch what argument is wrong with less pain, even there is log level switch for argument dumping.

      Attachments

        Issue Links

          Activity

            People

              Paul Guo Paul Guo
              Paul Guo Paul Guo
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: